--- a/proyecto-angular/package.json
+++ b/proyecto-angular/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "@types/jquery": "3.3.38",
+    "bxslider": "4.2.14",
+    "jquery": "3.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
